argo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
spec:
  ingressClassName: nginx
  rules:
  - host: argo.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argo-cd-argocd-server
            port: 
              number: 443
